[package]
name = "user-balance-merkle-tree"
version = "0.1.0"
edition = "2021"
description = "A simple Merkle tree implementation in Rust for user/balance storage."
license = "MIT"
keywords = ["merkle-tree", "cryptography", "data-structure"]
categories = ["cryptography", "data-structures"]


[dependencies]
sha2 = "0.9.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
